<resources>
    <string name="app_name">Epilepsia DCA</string>

    <string name="bluetooth_error">No se puede acceder al Bluetooth.</string>
    <string name="bluetooth_devicelist">Seleccione un dispositivo</string>

    <string name="dispositivo_conectado">CONECTADO</string>
    <string name="dispositivo_desconectado">DESCONECTADO</string>
    <string name="dispositivo_buscando">BUSCANDO...</string>

    <string name="medida_bateria_name">BATERÍA</string>
    <string name="medida_senyal_name">SEÑAL</string>
    <string name="medida_bpm_name">RITMO CARDIACO</string>
    <string name="medida_temperatura_name">TEMPERATURA</string>
    <string name="medida_o2_name">O2 EN SANGRE</string>

    <string name="login">Iniciar sesión</string>
    <string name="signUp">Registrarse</string>

    <string name="field_email">Correo electrónico</string>
    <string name="field_password">Contraseña</string>
    <string name="field_passwordConfirm">Repetir Contraseña</string>
    <string name="field_name">Nombre</string>
    <string name="field_lastname">Apellidos</string>
    <string name="btn_send">Enviar</string>

    <string name="field_bluetooth">BLUETOOTH</string>
    <string name="bluetooth_enable">Alerta Bluetooth activada</string>
    <string name="sms_enable">Alerta por sms activada</string>
    <string name="bluetooth_disable">Alerta Bluetooth desactivada</string>
    <string name="sms_disable">Alerta por sms desactivada</string>
    <string name="field_telefono">TELEFONO</string>
    <string name="field_hr">RITMO CARDÍACO</string>
    <string name="info_hr">Frecuencia cardiaca normal del usuario</string>
    <string name="hint_max">máx.</string>
    <string name="hint_min">mín.</string>
    <string name="field_segundos">TIEMPO DE ESPERA</string>
    <string name="info_segundos">Tiempo de espera en segundos para alertar de ataque</string>

    <string name="signup_succesfully">Registrado con éxito</string>
    <string name="signup_password_error">Las contraseñas no coinciden</string>
    <string name="signup_email_error">Correo electrónico no válido</string>
    <string name="signup_passlength_error">Contraseña debe tener mínimo 6 caracteres</string>
    <string name="signup_name_error">Nombre debe tener mínimo 3 caracteres</string>
    <string name="signup_lastname_error">Apellidos debe tener mínimo 3 caracteres</string>
    <string name="signup_empty_error">Debes rellenar todos los campos</string>

    <string name="login_signup">¿No tienes cuenta? ¡Regístrate!</string>
    <string name="login_succesfully">Inició sesión con éxito</string>
    <string name="login_password_error">La contraseñas es incorrecta</string>
    <string name="login_email_error">El usuario no existe</string>

    <string name="profile_succesfully">Perfil actualizado con éxito</string>
    <string name="profile_error">No se pudo actualizar el perfil</string>

    <string name="alarma_succesfully">Alarmas configuradas con éxito</string>
    <string name="alarma_error">No se han podido configurar todas las alarmas</string>

    <string name="menu_home">HOME</string>
    <string name="menu_registros">REGISTROS</string>
    <string name="menu_perfil">PERFIL</string>
    <string name="menu_alarmas">ALARMAS</string>

    <string name="alerta_titulo">ALERTA</string>
    <string name="alerta_info">La pulsera asociada está registrando un ataque de epilepsia.</string>

    <string name="sms_alerta">¡ALERTA</string>
    <string name="sms_info">ESTÁ SUFRIENDO UN ATAQUE DE EPILEPSIA.</string>

    <string name="fc_text">¡ATENCIÓN! Las alarmas no están configuradas</string>
    <string name="fc_ahora">CONFIGURAR AHORA</string>
    <string name="fc_tarde">MÁS TARDE</string>

    <string name="alarm_disable">¡ATENCIÓN! Todas las alarmas están deshabilitadas, ¿desea cambiarlo?</string>
    <string name="si">SÍ</string>
    <string name="no">NO</string>
</resources>
