<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ua.igala.epilepsia_dca.AlarmActivity"
    android:background="@drawable/ic_menu_updown_nexus_all"
    android:clickable="false">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/logout"
        android:background="@drawable/logout_white"
        android:onClick="logoutOnClick"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/ico_alarmas" />

    <ImageView
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:id="@+id/ico_home"
        android:layout_gravity="center"
        android:background="@drawable/home_reddisable"
        android:layout_above="@+id/text_registro"
        android:layout_alignStart="@+id/text_home"
        android:layout_marginLeft="6dp"
        android:onClick="homeOnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/menu_home"
        android:id="@+id/text_home"
        android:layout_marginTop="525dp"
        android:textStyle="bold"
        android:layout_marginLeft="35dp"
        android:textColor="@color/colorRedDisable"
        android:onClick="homeOnClick" />

    <ImageView
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:id="@+id/ico_registro"
        android:background="@drawable/signal_reddisable"
        android:layout_alignTop="@+id/ico_home"
        android:layout_alignBottom="@+id/ico_home"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="123dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/menu_registros"
        android:id="@+id/text_registro"
        android:layout_marginLeft="103dp"
        android:layout_alignTop="@+id/text_home"
        android:textColor="@color/colorRedDisable"/>

    <ImageView
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:id="@+id/ico_perfil"
        android:background="@drawable/profile_reddisable"
        android:layout_alignTop="@+id/ico_home"
        android:layout_alignBottom="@+id/ico_home"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="220dp"
        android:onClick="profileOnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/menu_perfil"
        android:id="@+id/text_perfil"
        android:layout_marginLeft="213dp"
        android:layout_alignTop="@+id/text_home"
        android:textColor="@color/colorRedDisable"
        android:onClick="profileOnClick"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="29dp"
        android:id="@+id/ico_alarmas"
        android:background="@drawable/alarm_white"
        android:layout_alignTop="@+id/ico_home"
        android:layout_alignBottom="@+id/ico_home"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="305dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/menu_alarmas"
        android:id="@+id/text_alarmas"
        android:layout_marginLeft="293dp"
        android:layout_alignTop="@+id/text_home"/>

    <!-- FIELDS -->

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/btn_send"
        android:id="@+id/send"
        android:onClick="sendOnClick"
        android:background="@drawable/button_rounded_233x72"
        android:layout_above="@+id/ico_alarmas"
        android:layout_alignEnd="@+id/logout"
        android:layout_marginBottom="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/field_bluetooth"
        android:id="@+id/field_bluetooth"
        android:layout_below="@+id/logout"
        android:layout_marginTop="105dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/field_telefono"
        android:id="@+id/field_telefono"
        android:layout_below="@+id/logout"
        android:layout_marginTop="195dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginLeft="45dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch_bluetooth"
        android:layout_alignStart="@+id/ico_perfil"
        android:layout_marginLeft="40dp"
        android:textColor="@color/colorRedDisable"
        android:layout_alignBottom="@+id/field_bluetooth"
        android:layout_toStartOf="@+id/logout" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch_phone"
        android:layout_alignTop="@+id/field_telefono"
        android:layout_alignStart="@+id/switch_bluetooth"
        android:layout_alignBottom="@+id/field_telefono"
        android:layout_toStartOf="@+id/logout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bluetooth_disable"
        android:textColor="@color/colorHint"
        android:id="@+id/text_bluetooth"
        android:layout_alignTop="@+id/field_bluetooth"
        android:layout_alignLeft="@+id/field_bluetooth"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sms_disable"
        android:textColor="@color/colorHint"
        android:id="@+id/text_telefono"
        android:layout_alignTop="@+id/field_telefono"
        android:layout_alignLeft="@+id/field_telefono"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/phone_number"
        android:layout_alignTop="@+id/field_telefono"
        android:layout_alignLeft="@+id/field_telefono"
        android:hint="XXXXXXXXX"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="80dp" />

</RelativeLayout>
