<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ua.igala.epilepsia_dca.ProfileActivity"
    android:background="@drawable/ic_menu_updown_nexus_all">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/logout"
        android:background="@drawable/logout_white"
        android:onClick="logoutOnClick"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/ico_alarmas" />

    <ImageView
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:id="@+id/ico_home"
        android:layout_gravity="center"
        android:background="@drawable/home_reddisable"
        android:layout_above="@+id/text_registro"
        android:layout_alignStart="@+id/text_home"
        android:layout_marginLeft="6dp"
        android:onClick="homeOnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/menu_home"
        android:id="@+id/text_home"
        android:layout_marginTop="525dp"
        android:textStyle="bold"
        android:layout_marginLeft="35dp"
        android:textColor="@color/colorRedDisable"
        android:onClick="homeOnClick" />

    <ImageView
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:id="@+id/ico_registro"
        android:background="@drawable/signal_reddisable"
        android:layout_alignTop="@+id/ico_home"
        android:layout_alignBottom="@+id/ico_home"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="123dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/menu_registros"
        android:id="@+id/text_registro"
        android:layout_marginLeft="103dp"
        android:layout_alignTop="@+id/text_home"
        android:textColor="@color/colorRedDisable"/>

    <ImageView
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:id="@+id/ico_perfil"
        android:background="@drawable/profile_white"
        android:layout_alignTop="@+id/ico_home"
        android:layout_alignBottom="@+id/ico_home"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="220dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/menu_perfil"
        android:id="@+id/text_perfil"
        android:layout_marginLeft="213dp"
        android:layout_alignTop="@+id/text_home"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="29dp"
        android:id="@+id/ico_alarmas"
        android:background="@drawable/alarm_reddisable"
        android:layout_alignTop="@+id/ico_home"
        android:layout_alignBottom="@+id/ico_home"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="305dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/menu_alarmas"
        android:id="@+id/text_alarmas"
        android:layout_marginLeft="293dp"
        android:layout_alignTop="@+id/text_home"
        android:textColor="@color/colorRedDisable"/>

    <!-- FIELDS -->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/field_name"
        android:ems="10"
        android:id="@+id/field_name"
        android:layout_marginTop="84dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorHint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/field_lastname"
        android:ems="10"
        android:id="@+id/field_lastname"
        android:enabled="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/field_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorHint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/field_email"
        android:id="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/field_lastname"
        android:layout_alignEnd="@+id/field_lastname"
        android:textColor="@color/colorHint"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/field_email"
        android:textColorHint="@color/colorHint"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorHint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/field_password"
        android:id="@+id/password"
        android:layout_below="@+id/field_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorHint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/field_password"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/colorHint" />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/btn_send"
        android:id="@+id/send"
        android:onClick="sendOnClick"
        android:background="@drawable/button_rounded_233x72"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/field_password"
        android:layout_alignEnd="@+id/logout" />

</RelativeLayout>
