<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ua.igala.epilepsia_dca.LoginActivity"
    android:background="@drawable/ic_menu_nexus">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/field_email"
        android:layout_above="@+id/password"
        android:layout_toLeftOf="@+id/button"
        android:layout_toStartOf="@+id/button"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="44dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/field_email"
        android:id="@+id/email"
        android:layout_alignBottom="@+id/field_email"
        android:layout_alignLeft="@+id/field_email"
        android:layout_alignStart="@+id/field_email"
        android:layout_marginBottom="55dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/field_password"
        android:id="@+id/password"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/field_email"
        android:layout_alignStart="@+id/field_email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/field_password"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_marginTop="26dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"
        android:id="@+id/button"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/field_password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="sendOnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/login_signup"
        android:id="@+id/textView"
        android:layout_below="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:onClick="signUpOnClick" />

</RelativeLayout>
